Fix scroll overflow caused by bad waypoint element positioning

--- a/web/app/themes/brian-thompson/assets/styles/components/_base.scss
+++ b/web/app/themes/brian-thompson/assets/styles/components/_base.scss
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   line-height: $lh;
   height: 100%;
   @include font-regular;
